@@ -1,3 +1,8 @@
+Wed Apr 18 23:32:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/extra.i,python/pythontest.py: Fix legacy sequence API for
+	  eset items.
+
 Wed Apr 18 23:31:39 BST 2007  Olly Betts <olly@survex.com>
 
 	* csharp/Makefile.am,java/org/xapian/Enquire.java,
